src/test/deca/syntax/valid/empty.deca
// Description:
//    Test du programme constitué d'un Main vide.
//
// Resultats:
//
// Historique:
//    cree le 01/01/2024

{}